--- a/frontend/src/resources/views/client/eventDetail.hbs
+++ b/frontend/src/resources/views/client/eventDetail.hbs
@@ -117,6 +117,7 @@
                                 data-style='zoom-out'
                                 class='ladda-button text-center white-color text-bold table-cell button-lg ver-middle btn-booking'
                                 buttonType='buy-ticket'
+                                href="/events/{{event.slug}}/ticket-booking"
                             >
                                 Mua vé ngay
                             </a>
@@ -282,11 +283,11 @@
                                         Northern Ravers. This will be an incredible experience and a memorable journey
                                         for all of us. Be ready to have a blast this summer!</p>
 
-                                    <p style='text-align: center'><iframe
+                                    {{!-- <p style='text-align: center'><iframe
                                             height='360'
                                             data-src='//www.youtube.com/embed/JY0N7dQLb-c'
                                             width='640'
-                                        ></iframe>\</p>
+                                        ></iframe>\</p> --}}
 
                                     <p><span
                                             style='color: rgb(32, 206, 136); font-family: wfont_2ce07c_766eb9c263e84c53b66a05d024f13b12, wf_766eb9c263e84c53b66a05d02, orig_utm_nokia'
