--- a/frontend/src/resources/views/client/booking.hbs
+++ b/frontend/src/resources/views/client/booking.hbs
@@ -74,7 +74,7 @@
     
     {{!-- <form action="POST"> --}}
     <div class='row'>
-        <div class='col-md-8'>
+        <div id="payment-list" class=' col-md-8'>
             {{#if tickets_type}}
                 <table class='table table-stripe mt-5'>
 
@@ -89,7 +89,7 @@
                     </thead>
                     <tbody>
                         {{#each tickets_type}}
-                            <tr data-code="{{code}}" data-quantity="{{quantity}}" class="ticket-items">
+                            <tr  data-price="{{price}}" data-name="{{name}}" data-code="{{code}}" data-quantity="{{quantity}}" class="ticket-items">
                                 <td style="text-transform: capitalize;" scope='row'>{{name}}</td>
                                 <td class='text-right'>{{price}}</td>
                                 <td style='width: 8rem' class="text-center">
@@ -164,55 +164,7 @@
                                 </tbody>
                                     
                                     </table>
-                                    <table class='table table-striped valign-middle margin-bottom-0 ng-scope'>
-                                        <thead class='color-3'><tr><th
-                                    colspan='2'
-                                    class='font-bold uppercase text-left padding-left-0 padding-right-0'
-                                ><span translate='T.LAYOUT.PAYMENT_METHOD' class='ng-scope'>Hình thức thanh toán</span></th></tr></thead><tbody
-                        ><tr><th
-                                    colspan='2'
-                                    class='text-left padding-left-0 padding-right-0'
-                                ><span class='ng-scope'
-                                    >Paypal</span><!-- end ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.Momo -->
-                                    <!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.Payoo -->
-                                   </th></tr><!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.COD || ((order.paymentInfo.paymentType == PAYMENT_TYPE.ATM || order.paymentInfo.paymentType == PAYMENT_TYPE.CreditCard|| order.paymentInfo.paymentType == PAYMENT_TYPE.Cybersource) && event.hasPhysicalItem) --><!-- ngIf: (order.paymentInfo.paymentType == PAYMENT_TYPE.COD || ((order.paymentInfo.paymentType == PAYMENT_TYPE.ATM || order.paymentInfo.paymentType == PAYMENT_TYPE.CreditCard || order.paymentInfo.paymentType == PAYMENT_TYPE.Cybersource) && event.hasPhysicalItem)) && order.paymentInfo.deliveryInfo.note --><!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.OfficePickup && order.paymentInfo.officePickupInfo.note --><!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.ATM --><!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.CreditCard --><!-- ngIf: order.paymentInfo.paymentType == PAYMENT_TYPE.Cybersource --></tbody></table><!-- end ngIf: order.paymentInfo.paymentType --><table
-                        class='table table-striped valign-middle margin-bottom-0'
-                    ><thead class='color-3'><tr><th colspan='2' class='text-left'><span
-                                        class='font-bold text-uppercase ng-scope'
-                                        translate='T.LAYOUT.TICKET_INFO'
-                                    >Thông tin đặt vé</span><!-- ngIf: bookingStep != BOOKING_STEP.selectTickets --><!-- end ngIf: bookingStep != BOOKING_STEP.selectTickets --></th></tr><!-- ngIf: !order.orderDetails || !order.orderDetails.length --></thead><tbody
-                        ><!-- ngIf: order.orderDetails.length --><tr
-                                ng-if='order.orderDetails.length'
-                                class='color-6 ng-scope'
-                            ><td class='font-600 ng-scope' translate='T.LAYOUT.TICKET_TYPE'>Loại vé</td><td
-                                    class='font-600 text-right ng-scope'
-                                    width='90'
-                                    translate='T.LAYOUT.QUANTITY'
-                                >Số lượng</td></tr><!-- end ngIf: order.orderDetails.length --><!-- ngRepeat: orderDetail in order.orderDetails | orderBy:'displayOrder' --><tr
-                                ng-repeat="orderDetail in order.orderDetails | orderBy:'displayOrder'"
-                                class='ng-scope'
-                            ><td><div
-                                        class='ticket-type ng-binding'
-                                        ng-bind='orderDetail.ticketType.title'
-                                    >Standard</div><div class='font-085 color-6'><span
-                                            ng-bind='orderDetail.ticketType.applyingPrice | number'
-                                            class='ng-binding'
-                                        >800,000</span>
-                                        <span ng-bind='event.currency.isoCode' class='ng-binding'>VND</span></div><div
-                                        class='clearfix'
-                                    ><small><!-- ngRepeat: section in orderDetail.sections --></small></div></td><td
-                                    class='text-right'
-                                ><div><span ng-bind='orderDetail.quantity' class='ng-binding'>1</span></div><div
-                                        class='font-085 color-6'
-                                    ><span
-                                            ng-bind='orderDetail.quantity * orderDetail.ticketType.applyingPrice | number'
-                                            class='ng-binding'
-                                        >800,000</span>
-                                        <span
-                                            ng-bind='event.currency.isoCode'
-                                            class='ng-binding'
-                                        >VND</span></div></td></tr></tbody>
-                                </table>
+                                    
                             </div>
                 </div>
 
@@ -225,14 +177,18 @@
                                     <strong translate="T.LAYOUT.TOTAL" class="ng-scope">Tổng cộng</strong>
                                 </td>
                                 <td class="text-right">
-                                    <strong><span ng-bind="order.finalAmount || 0 | number" class="ng-binding">0</span> <span ng-bind="event.currency.isoCode" class="ng-binding">VND</span></strong>
+                                    <strong><span id="total" ng-bind="order.finalAmount || 0 | number" class="ng-binding">0</span> </strong>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
 
-                <div style="margin-top: 30px; line-height: 30px" class="w-100 btn btn-success" id="btnPay">Tiếp tục</div>
+                <div style="margin-top: 30px; line-height: 30px" class="w-100 btn btn-success" data-customer="{{user_id}}" id="btnPay">Tiếp tục</div>
+                {{!-- <form action="/pay" method="post"> --}}
+                    <input id="booking_id" name="booking_id" type="hidden">
+                    <button type="submit" style="margin-top: 30px; line-height: 30px" class="w-100 btn btn-success" id="btnConfirm">Thanh toán</button>
+                {{!-- </form> --}}
         </div>
 
         
@@ -242,24 +198,234 @@
 </div>
 
 <script>
+    $(document).ready(function() {
+        $('#btnConfirm').hide();
+       })
     $('.payment-internet').click(function() {
         alert('Phương thức thanh toán này đang được bảo trì');
     })
 
     $('#btnPay').click(function() {
         let items = $('.ticket-items')
-        let data = [];
+        let customer = $(this).data('customer');
+        
+        let list = [];
         for(let i = 0; i < items.length; i++) {
             let code = $(items[i]).data('code');
+            let name = $(items[i]).data('name');
+            let price = $(items[i]).data('price');
             let quantity = $(items[i]).children().children().children().val();
             
+            if(quantity > 4) {
+                alert('Bạn chỉ có thể mua tối đa 4 vé mỗi loại');
+                return;
+            }
+
             if(quantity > 0) {
-                data.push({code, quantity})
+                list.push({code, name, price, quantity})
             }
         }
 
+        var total = 0;
+        var ticket_info = '';
+        for(let i = 0; i < list.length; i++) {
+            let money = parseInt(list[i].price.replaceAll('.',""));
+            total += money * list[i].quantity;
+            ticket_info += `
+                <tr class='ng-scope'>
+                    <td>
+                        <div
+                                class='ticket-type ng-binding'
+                                ng-bind='orderDetail.ticketType.title'
+                            >${list[i].name}
+                        </div>
+                        <div class='font-085 color-6'>
+                            <span
+                                    ng-bind='orderDetail.ticketType.applyingPrice | number'
+                                    class='ng-binding'
+                                >${list[i].price}
+                            </span>
+                            
+                        </div>
+                        <div
+                                class='clearfix'
+                            ><small></small>
+                        </div>
+                    </td>
+
+                    <td
+                            class='text-right'
+                        >
+                        <div>
+                            <span ng-bind='orderDetail.quantity' class='ng-binding'>
+                                ${list[i].quantity}
+                            </span>
+                        </div>
+
+                        <div
+                                class='font-085 color-6'
+                            >
+                            <span
+                                    ng-bind='orderDetail.quantity * orderDetail.ticketType.applyingPrice | number'
+                                    class='ng-binding'
+                                >${list[i].price}
+                            </span>
+                            
+                        </div>
+                    </td>
+                </tr>
+            `
+        }
+        
+        if(list.length > 0) {
+            $.ajax({
+                url: '/place-ticket',
+                method: 'PUT',
+                data: { list, total, customer },
+                success: function(result) {
+                    let data = result.data;
+                    let ids = data.map(d => {
+                        return d._id;
+                    })
+
+                    let booking = result.booking;
+                    $('#booking_id').val(booking._id)
+                    $('#total').text(total.toLocaleString('vi-vn', { style: 'currency', currency: 'VND'}));
+
+                    $('.bill-content').append(`
+                        <table class='table table-striped valign-middle margin-bottom-0 ng-scope'>
+                                                <thead class='color-3'><tr><th
+                                            colspan='2'
+                                            class='font-bold uppercase text-left padding-left-0 padding-right-0'
+                                        ><span translate='T.LAYOUT.PAYMENT_METHOD' class='ng-scope'>Hình thức thanh toán</span></th></tr></thead><tbody
+                                >
+                                <tr>
+                                    <th
+                                            colspan='2'
+                                            class='text-left padding-left-0 padding-right-0'
+                                        >
+                                        <span style="font-weight: 500" class='ng-scope'
+                                            >Paypal
+                                        </span>
+                                            
+                                    </th>
+                                    </tr>
+                                        <table
+                                            class='table table-striped valign-middle margin-bottom-0'
+                                        >
+                                            <thead class='color-3'><tr><th colspan='2' class='text-left'>
+                                                <span
+                                                    class='font-bold text-uppercase ng-scope'
+                                                >Thông tin đặt vé
+                                                </span>
+                                            </thead>
+                                            <tbody
+                                
+                                                <tr>
+                                                    <td class='font-600 ng-scope' translate='T.LAYOUT.TICKET_TYPE'>Loại vé</td><td
+                                                            class='font-600 text-right ng-scope'
+                                                            width='90'
+                                                            translate='T.LAYOUT.QUANTITY'
+                                                        >Số lượng
+                                                    </td>
+                                                </tr>
+                                                ${ticket_info}
+                                             </tbody>
+                                        </table>
+                    `)
+
+                    $('#payment-list').empty();
+                    $('#payment-list').append(`
+                        <div style="margin-top: 100px" class="w-100 mx-auto text-center">
+                            <img width="100px" src="/img/EzTicket-logo.png" >
+                        </div>
+                        <div class="w-100 mx-auto text-center h3">Bạn có 20 phút để thanh toán đơn hàng của mình</div>
+                        <div class="w-100 mx-auto text-center h4"><span id="minutes">00</span>:<span id="seconds">00</span></div>
+
+                    `);
+
+                    var minutesLabel = document.getElementById("minutes");
+                    var secondsLabel = document.getElementById("seconds");
+                    var totalSeconds = 0;
+                    let timer = setInterval(setTime, 1000);
+
+                    function setTime() {
+                        ++totalSeconds;
+                        
+                        secondsLabel.innerHTML = pad(totalSeconds % 60);
+                        minutesLabel.innerHTML = pad(parseInt(totalSeconds / 60));
+
+                        if(totalSeconds == 1200) {
+                            clearInterval(timer)
+                            $.ajax({
+                                url: '/displace-ticket',
+                                method: 'PUT',
+                                data: { ids, booking },
+                                success: function(res) { 
+                                    alert('Đơn hàng của bạn đã bị hủy');
+                                    window.location.href = '/';
+                                },
+                                error: function(error) {
+                                    alert('Đơn hàng đã hoàn thành');
+                                    window.location.href = '/';
+                                }
+                            })
+                            
+                        }
+                    }
+
+                    function pad(val) {
+                        var valString = val + "";
+                        if (valString.length < 2) {
+                            return "0" + valString;
+                        } else {
+                            return valString;
+                        }
+                    }
+
+                    $('#btnPay').hide();
+                    $('#btnConfirm').show();
+                },
+                error: function(err) {
+                    alert('Số lượng vé không còn đủ');
+                }
+            })
+        }
+        else {
+            alert('Vui lòng chọn vé trước khi thanh toán');
+        }
+
+       
+    })
+
+    $('#btnConfirm').click(function() {
+        let booking_id = $('#booking_id').val();
         $.ajax({
-            url: 
+            url: '/pay',
+            method: 'POST',
+            data: { booking_id },
+            success: function(result) {
+                if(result.code == 1) {
+                    $('#payment-list').empty();
+                    $('#payment-list').append(`
+                        <div style="margin-top: 100px" class="w-100 mx-auto text-center">
+                            <img width="100px" src="/img/EzTicket-logo.png" >
+                        </div>
+                        <div class="w-100 mx-auto text-center h3">${result.msg}</div>
+                        
+
+                    `);
+                    $('#btnConfirm').hide();
+                }
+
+                else if (result.code == 2) {
+                    window.open(result.url);
+                }
+            },
+            error: function(err) {
+                console.log(err);
+            }
         })
     })
+    
 </script>
