--- a/frontend/src/public/css/admin.css
+++ b/frontend/src/public/css/admin.css
@@ -258,7 +258,7 @@ td {
 
 .home-section {
     position: relative;
-    background: #e4e9f7;
+    background: #E4E9F6;;
     min-height: 100%;
     left: 0px;
     width: calc(100% - 260px);
