--- a/frontend/src/resources/views/client/booking.hbs
+++ b/frontend/src/resources/views/client/booking.hbs
@@ -144,7 +144,7 @@
                                     class='text-right'
                                     width='55%'
                                 ><span class='ng-binding'
-                                    >Kuo Nhan Dung</span></td></tr><tr><td class='color-a' width='10%'><i
+                                    >{{username}}</span></td></tr><tr><td class='color-a' width='10%'><i
                                         class='ti-email'
                                     ></i></td><td class='text-left font-bold color-6' width='35%'><span
                                         translate='T.LAYOUT.EMAIL'
@@ -152,15 +152,15 @@
                                     >Email</span></td><td class='text-right' width='55%'><span
                                         ng-bind='order.buyerInfo.email'
                                         class='ng-binding'
-                                    >nkeyskuo124@gmail.com</span></td></tr><tr><td class='color-a' width='10%'><i
+                                    >{{email}}</span></td></tr><tr><td class='color-a' width='10%'><i
                                         class='ti-mobile'
                                     ></i></td><td class='text-left font-bold color-6' width='35%'><span
                                         translate='T.LAYOUT.PHONE_NUMBER'
                                         class='ng-scope'
                                     >Điện thoại</span></td><td class='text-right' width='55%'><span
                                         ng-bind='order.buyerInfo.phoneNumber'
-                                        class='ng-binding'
-                                    >0767916592</span></td></tr>
+                                        class='ng-binding'>
+                                    {{phone}}</span></td></tr>
                                 </tbody>
                                     
                                     </table>
