--- a/frontend/src/resources/views/client/eventPreview.hbs
+++ b/frontend/src/resources/views/client/eventPreview.hbs
@@ -11,7 +11,7 @@
                             <div class='detail__content'>
                                 <div class='detail__container__left mb-3'>
                                     <div class='detail__container__left__img'>
-                                        <a style="position: absolute; right: 0; text-decoration: none" type='button' href='/my-ezt/events' class='px-3 py-2 btn-primary'><i class="ti-arrow-left"></i></a>
+                                        <a style="position: absolute; right: 0; text-decoration: none" type='button' href='{{#if admin}}/my-ezt/admin{{else}}/my-ezt/events{{/if}}' class='px-3 py-2 btn-primary'><i class="ti-arrow-left"></i></a>
                                         <img width="100%" src='{{data.banner}}' alt='detail' />
                                     </div>
                                     
