--- a/frontend/src/resources/views/error.hbs
+++ b/frontend/src/resources/views/error.hbs
@@ -1,4 +1,4 @@
-<h1 class="text-center w-100 d-block mt-5">404 Not Found</h1>
+{{!-- <h1 class="text-center w-100 d-block mt-5">404 Not Found</h1>
 
 {{#if error}}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -15,4 +15,18 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-{{/if}}
+{{/if}} --}}
+
+<style>
+    .center {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+        height: 100vh;
+    }
+</style>
+
+<div class="center w-100">
+    <img src="/img/logo-trans.png" alt="">
+</div>
